@@ -1,0 +1,9 @@
+package test.reports.issue2886;
+
+import org.testng.annotations.BeforeSuite;
+
+public class BaseClassSample {
+
+  @BeforeSuite
+  public void beforeSuite() {}
+}
