@@ -1,0 +1,9 @@
+package test.reports.issue2886;
+
+import org.testng.annotations.Test;
+
+public class HydeTestSample extends BaseClassSample {
+
+  @Test
+  public void rogueBehaviourTest() {}
+}
