@@ -1,0 +1,8 @@
+package test.reports.issue2886;
+
+import org.testng.annotations.Test;
+
+public class JekyllTestSample extends BaseClassSample {
+  @Test
+  public void gentleBehaviourTest() {}
+}
